--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,24 +1,12 @@
-h1 {
-    color: red;
-}
-
-p#index-title {
-  text-align: center;
-  font-size: 15px;
-  color: blue;
-}
-
-.posts {
+.social-btn {
+  position: relative;
   border: solid;
   margin: 5px;
   padding: 5px;
   height: 200px;
-}
-
-section {
-  background: #5998ff;
-  border-style: solid;
-  border-width: 5px;
-  margin: 5px 5px 5px 5px;
-  padding: 5px 5px 5px 5px;
+  width: 20px;
+  background-color: #4187FB;
+  border-color: #A736FB;
+  text-align: center;
+  margin: 300px;
 }
