--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,5 @@
 <h1>About Bloccit</h1>
 <p>Created by: Me</p>
+
+
+<%= link_to "Follow me on Facebook", "hhttps://www.facebook.com/profile.php?id=100009465465751", class: "social-btn" %>
