--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,12 +1,11 @@
 .social-btn {
   position: relative;
-  border: solid;
-  margin: 5px;
-  padding: 5px;
-  height: 200px;
+  height: 20px;
   width: 20px;
   background-color: #4187FB;
+  border: solid;
   border-color: #A736FB;
   text-align: center;
+  width: 70px;
   margin: 300px;
 }
