--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,4 +2,4 @@
 <p>Created by: Me</p>
 
 
-<%= link_to "Follow me on Facebook", "hhttps://www.facebook.com/profile.php?id=100009465465751", class: "social-btn" %>
+<%= link_to "Follow me on Facebook", "https://www.facebook.com/profile.php?id=100009465465751", class: "social-btn" %>
