--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Advertisement</h1>
- #<% @advertisement.each do |ad| %>
+ <% @advertisement.each do |ad| %>
    <div class="media">
      <div class="media-body">
        <h4 class="media-heading">
-         #<%= link_to ad.title, ad %>
+         <%= link_to ad.title, ad %>
        </h4>
      </div>
    </div>
-  #<% end %>
+  <% end %>
