--- a/app/views/question/new.html.erb
+++ b/app/views/question/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Question#new</h1>
-<p>Find me in app/views/question/new.html.erb</p>
+<%= form_for @question do |f| %>
+   <%= f.label :title %>
+   <%= f.text_field :title %>
+ 
+   <%= f.label :body %>
+   <%= f.text_area :body %>
+
+   <%= f.check_box(:resolved, checked_value = "1", unchecked_value = "0") %>
+ 
+   <%= f.submit "Save" %>
+ <% end %>
+
+
+
+
+
+
+<!-- check_box(object_name, method, options = {}, checked_value = "1", unchecked_value = "0") -->
