--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,15 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
+ user-info {
+   matgin-top: 9px;
+ }
+
+.nav {
+  margin-top: 5px;
+}
+
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
