--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,20 @@
 <br>
 <div class="jumbotron">
   <h1>Bloccit</h1>
-  <p>Bloccit is a resource for sharing linek with your friends!</p>
+  <p>Bloccit is a resource for sharing links with your friends!</p>
   <p>
-    <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-    <%= link_to "Sign Up", new_user_registration_oath, class: 'btn btn-primary' %> today!
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
   </p>
 </div>
 
-<div> class="row"
+<div class="row">
   <div class="col-md-4">
     <h2>Solves world hunger</h2>
+    <p>Bloccit will deliver food and water to those in need, all over the world.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Eliminates poverty</h2>
     <p>Bloccit will deliver money and education to those in need, all over the world.</p>
   </div>
   <div class="col-md-4">
