--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -10,18 +10,6 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for @topic do |f| %>
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.texgt_field :name, class: 'form-control', placeholder: "Enter topic name." %>
-      </div>
-      <div class="form-group">
-        <%= f.label :description %>
-        <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter topic description" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :public, class: 'checkbox' do %>
-          <%= f.check_box :public %> Public Topic
-        <% end %>
+      <%= render partial: 'form', locals: { topic: @topic, post: @post } %>
       </div>
     </div>
