--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= post.markdown_title %></h1>
-
+ <h1><%= markdown @post.title %></h1>
+ 
 <div class="row">
   <div class="col-md-8">
     <small>
