--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,7 @@
        <%= @post.user.name %>
     </small>
     <p><%= post.markdown_body %></p>
+    <%= image_tag @user.image_url%>
   </div>
   <div class="col-md-4">
     <% if policy(@post).edit? %>
