--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -25,6 +25,7 @@
   <div class="col-md-4">
     <% if policy(Post.new).create? %>
     <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    <%= image_tag @user.image_url%>
     <% end %>
   </div>
 </div>
