--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,19 @@
-<%= form_for [topic, post, post.comments.new] do |f| %>
+<%= form_for [topic, post] do |f| %>
 
-  #code for new comment
-  
+  <% if comment.errors.any? %>
+     <div class="alert alert-danger">
+       <h4>There are <%= pluralize(comment.errors.count, "error") %>.</h4>
+       <ul>
+         <% comment.errors.full_messages.each do |msg| %>
+           <li><%= msg %></li>
+         <% end %>
+       </ul>
+     </div>
+   <% end %>
+  <%= form_group_tag(comment.errors[:body]) do %>
+     <%= f.label :body %>
+     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter comment" %>
+   <% end %>
    <div class="form-group">
      <%= f.submit "Save", class: 'btn btn-success' %>
    </div>
