--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,9 @@
-
-
- 
+<%= form_for [topic, post] do |f| %>
+  <%= form_group_tag(topic, post, post.comments.new) [:body]) do %>
+     <%= f.label :body %>
+     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter Comment" %>
+  <% end %>
+   <br>
+  <div class="form-group">
+    <%= f.submit "Save", class: 'btn btn-success' %>
+  </div>
