--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,11 +2,12 @@
 <div class="jumbotron">
   <h1>Bloccit</h1>
   <p>Bloccit is a resource for sharing links with your friends!</p>
-  <% if current_user.try = nil %>
+  <% if current_user.try(:admin?) %>
   <p>
       <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
       <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
   </p>
+  <% end %>
 </div>
 
 <div class="row">
