--- a/app/views/comments/create.html.erb
+++ b/app/views/comments/create.html.erb
@@ -1,2 +1,1 @@
-<h1>Comments#create</h1>
-<p>Find me in app/views/comments/create.html.erb</p>
+<%= render partial: 'form', locals: { topic: @topic, post: @post }  %>
