--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <% if policy(@post).edit? %>
-  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-success' %>
+  <%= link_to "Edit", edit_topic_post_path(@post), class: 'btn btn-success' %>
 <% end %>
 
 <p><%= @post.body %></p>
