--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,18 @@
+ // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
  user-info {
-   matgin-top: 9px;
+   margin-top: 9px;
  }
 
 .nav {
   margin-top: 5px;
+}
+
+.vote-arrows {
+  width: 40px;
+  text-align: center;
 }
 
 
