--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -1,4 +1,4 @@
-<% if policy(Vote.new).create> %>
+<% if policy(Vote.new).create %>
   <div class="vote-arrows pull-left">
     <div><%= link_to " ", post_up_vote_path(post), class: 'glyphicon glyphicon-chevron-up' %></div>
     <div><strong><%= post.points %></strong></div>
