--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
   width: 40px;
   text-align: center;
 }
-
+ .favorite {
+   margin-top: 20px;
+ }
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
