--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,6 +32,7 @@
     <%= pluralize(@post.down_votes, 'down vote') %>
   </small>
 </div>
+<%= render partial: 'favorites/favorite', locals: { post: @post } %>
 <% if policy(@comment).user = nil %>
   <% hidden_field(:comments) %>
 <% else policy(@comment).user = true %>
