--- a/app/views/votes/_voter.html.erb
+++ b/app/views/votes/_voter.html.erb
@@ -1,7 +1,7 @@
 <% if policy(Vote.new).create? %>
   <div class="vote-arrows pull-left">
     <div>
-      <%= link_to " ", post_up_vote_path(post), class: 'glyphicon glyphicon-chevron-up' #{(current_user.voted(post) && current_user.voted(post).up_vote?) ? 'voted' : '' }"%></div>
+      <%= link_to " ", post_up_vote_path(post), class: 'glyphicon glyphicon-chevron-up'  #{(current_user.voted(post) && current_user.voted(post).up_vote?) ? 'voted' : '' }"></div>
     <div><strong><%= post.points %></strong></div>
      <div><%= link_to " ", post_down_vote_path(post), class: 'glyphicon glyphicon-chevron-down' method: :post do%></div>
   </div>
