--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -8,21 +8,8 @@
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
     <% @posts.each do |post| %>
-      <div class="media">
-        <%= render partial: 'votes/voter', locals: { post: post } %>
-        <div class="media-body">
-          <h4 class="media-heading">
-            <%= link_to (markdown_to_html post.title), [@topic, post] %>
-          </h4>
-          <small>
-          <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by
-          <%= post.user.name %><br>
-          <%= post.comments.count %> Comments
-        </small>
-       </div>
-      <% end %>
-  </div>
+    <% end %>
+    <%= render @posts %>
   <div class="col-md-4">
     <% if policy(Post.new).create? %>
     <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
