--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -1,5 +1,3 @@
-
- 
 <div class="row">
   <div class="col-md-8">
     <%= render partial: 'votes/voter', locals: { post: @post } %> 
@@ -45,5 +43,5 @@
   <%= render 'comments/form' %>
 
   <h3>Add a comment:</h3>
-  <%= render 'comments/comment' %>
+  <%= render 'comments/comment', collection: @comments %>
 </div>
