--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [topic, post] do |f| %>
+<%= form_for [@post, Comment.new], remote: true do |f|%>
   <%= form_group_tag(post.comments.new) [:body]) do %>
      <%= f.label :body %>
      <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter Comment" %>
