--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -23,6 +23,14 @@
   <%= link_to "Delete Post", [@topic, @post], method: :delete, class 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
 <% end %>
 
+ <h2>Comments</h2>
+ <div class='js-comments'>
+   <%= render partial: 'comments/comment', collection: @comments %>
+ </div>
+ <div class='new-comment'>
+   <%= render 'comments/form' %>
+ </div>
+
 <div>
   <h3><%= pluralize(@post.points, 'point') %></h3>
   <small>
